--- a/@twal/styles/components/nav/settings.scss
+++ b/@twal/styles/components/nav/settings.scss
@@ -1,8 +1,8 @@
 .settings {
   @include page-hover;
-  background: $purple;
+  background: $primarycolor;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 9998;
 }
